<resources>
    <string name="app_name">GankArt</string>


    <string name="action_share">分享</string>

    <string name="exit_toast">再按一次退出程序哦~</string>
    <string name="jump">跳过</string>
    <string name="jump_default">跳过(3s)</string>
    <string name="rv_with_footer_pull_load_more">上拉或点击加载更多</string>
    <string name="rv_with_footer_loading">加载中…</string>
    <string name="rv_with_footer_empty">没有数据啦</string>
    <string name="search">搜索</string>
    <string name="search_hint">搜索</string>
    <string name="search_category_hint">请选择搜索分类</string>

    <string name="main_nav_home">主页</string>
    <string name="main_nav_gank">干货</string>
    <string name="main_nav_xiandu">闲读</string>
    <string name="main_nav_fuli">福利</string>
    <string name="main_nav_mine">我的</string>

    <string name="xiandu_main_tab">主分类</string>
    <string name="xiandu_sub_tab">子分类</string>

    <string name="search_category_all">all</string>
    <string name="search_category_android">Android</string>
    <string name="search_category_ios">iOS</string>
    <string name="search_category_video">休息视频</string>
    <string name="search_category_fuli">福利</string>
    <string name="search_category_resource">拓展资源</string>
    <string name="search_category_front">前端</string>
    <string name="search_category_recommend">瞎推荐</string>
    <string name="search_category_app">App</string>

    <string name="common_loading_empty">没有数据</string>
    <string name="common_loading_error">网络错误</string>
    <string name="login_tips">使用GitHub登入</string>
    <string name="login_hint_username">用户名或邮箱</string>
    <string name="login_hint_password">登入密码</string>
    <string name="login_sign_in">登入</string>
    <string name="my_repos">我的仓库</string>
    <string name="my_events">我的动态</string>

    <string name="repos_filter_created">按创建时间排序</string>
    <string name="repos_filter_letter">按名称排序</string>
    <string name="repos_filter_update">按更新时间排序</string>

</resources>
